Fix pairs behind create swap div

--- a/src/MarketPair.css
+++ b/src/MarketPair.css
@@ -94,7 +94,6 @@
 #market-pair-chart-choser {
     right: 20px;
     position: absolute;
-    z-index: 10;
 }
 
 #market-pair-middle {
